<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/part_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <ImageView
        android:id="@+id/part_picture"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/spare_parts_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/part_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/part_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/spare_parts_name"
        app:layout_constraintBottom_toTopOf="@+id/part_description"
        app:layout_constraintLeft_toRightOf="@+id/part_picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/part_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:maxLines="2"
        android:text="@string/spare_parts_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/part_picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part_name" />

</androidx.constraintlayout.widget.ConstraintLayout>