<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/title_marginX"
        android:layout_marginTop="@dimen/title_marginY"
        android:layout_marginRight="@dimen/title_marginX"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/app_logo_width"
            android:layout_height="@dimen/app_logo_height"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_white_car"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/app_title_text_height"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_slogan"
                android:textAllCaps="false"
                android:textSize="@dimen/app_title_slogan_text_height"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/questionnaire_marginY"
        android:text="@string/app_request"
        android:textColor="@color/black"
        android:textSize="@dimen/questionnaire_text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/questionnaire_marginX"
        android:layout_marginTop="@dimen/questionnaire_marginY"
        android:layout_marginEnd="@dimen/questionnaire_marginX"
        android:layout_marginBottom="@dimen/order_button_marginY"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/questionnaire_input_field_height"
                android:background="@color/fields_background"
                android:hint="@string/questionnaire_customer_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/questionnaire_input_field_height"
                android:layout_marginTop="@dimen/questionnaire_fields_marginY"
                android:background="@color/fields_background"
                android:hint="@string/questionnaire_phone_text"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/questionnaire_fields_marginY"
            android:layout_weight="0"
            android:text="@string/questionnaire_auto_brand"
            android:textColor="@color/black"
            android:textSize="@dimen/questionnaire_text_height" />

        <Spinner
            android:id="@+id/auto_brand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/questionnaire_spinner_height"
            android:background="@color/fields_background"
            android:hapticFeedbackEnabled="false"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/questionnaire_fields_marginY"
            android:layout_weight="0"
            android:text="@string/questionnaire_auto_model"
            android:textColor="@color/black"
            android:textSize="@dimen/questionnaire_text_height" />

        <Spinner
            android:id="@+id/auto_model"
            android:layout_width="match_parent"
            android:layout_height="@dimen/questionnaire_spinner_height"
            android:background="@color/fields_background"
            android:hapticFeedbackEnabled="false"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/questionnaire_fields_marginY"
            android:layout_weight="0"
            android:text="@string/questionnaire_parts_list"
            android:textColor="@color/black"
            android:textSize="@dimen/questionnaire_text_height" />

        <ListView
            android:id="@+id/parts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            tools:ignore="NestedScrolling" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_button_height"
        android:layout_marginStart="@dimen/order_button_marginX"
        android:layout_marginEnd="@dimen/order_button_marginX"
        android:layout_marginBottom="@dimen/order_button_marginY"
        android:layout_weight="0"
        android:text="@string/order_button_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/order_button_background"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>